# NocteEngine

./: .gitignore  CMakeLists.txt  README.md
Models/materials/: chain_texture.dds  lion.dds  lion_bump.dds  spnza_bricks_a_spec.dds  sponza.mtl  sponza_thorn_spec.dds
Models/materials/textures/: chain_texture_mask.dds  sponza_arch_spec.dds  sponza_column_a_spec.dds  sponza_column_c_bump.dds  sponza_column_c_spec.dds
include/: DXRHelper.h
include/imgui/backends/: imgui_impl_dx12.cpp  imgui_impl_win32.cpp
include/nv_helpers_dx12/: ShaderBindingTableGenerator.cpp  ShaderBindingTableGenerator.h
include/tinyobj/: tiny_obj_loader.h
materials/: spnza_bricks_a_bump.dds  sponza_thorn_diff.dds  vase_plant_mask.dds
materials/textures/: floor_gloss.dds  sponza_column_b_spec.dds  sponza_fabric_purple.dds
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  WinMain.cpp  Window.cpp  Window.h
src/Models/materials/: sponza_thorn_bump.dds  vase_bump.dds
src/Models/materials/textures/: sponza_column_b_bump.dds  sponza_details_spec.dds  vase_round_bump.dds  vase_round_spec.dds
src/Renderer/: FrameResource.cpp  FrameResource.h  Renderer.cpp  Renderer.h
src/Renderer/materials/: lion2_bump.dds  sponza_column_a_bump.dds  sponza_thorn_mask.dds
src/Renderer/materials/textures/: background_bump.dds
src/Shaders/: BSDF.hlsl  Common.hlsl  Denoise.cso  Denoise.hlsl  Hit.hlsl  LightingUtil.hlsl  MicrofacetBRDFUtils.hlsl  Miss.hlsl  PathTracerCommon.hlsl  RayGen.hlsl  ShadowRay.hlsl  TemporalAccumulation.cso  TemporalAccumulation.hlsl  pixel.cso  pixel.hlsl  vertex.cso  vertex.hlsl
src/Utils/: d3dUtil.cpp  d3dUtil.h
src/Utils/Shaders/: vertex.hlsl
src/materials/: chain_texture_bump.dds  sponza.mtl  sponza_arch_bump.dds  sponza_fabric_spec.dds  sponza_flagpole_spec.dds  sponza_floor_a_spec.dds  vase_plant_spec.dds
src/materials/textures/: sponza_ceiling_a_spec.dds  vase_plant.dds
